[package]
name = "nativehelper"
version = "0.1.0"
edition = "2021"

# cargo rustc --release -- -C link-arg=-Wl,-rpath,\$ORIGIN

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.11", features = ["derive"]}
steamworks = "0.10.0"
websocket = "0.27.0"
