[package]
authors = ["Arianne Project"]
name = "nativehelper"
documentation = "https://arianne-project.org/game/stendhal.html"
edition = "2021"
license = "LGPL-3"
repository = "https://github.com/arianne/stendhal"
version = "0.3.1"


[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = "z"
panic = 'abort'
strip = true

[dependencies]
clap = {version = "4.4.11", features = ["derive"]}
steamworks = "0.10.0"
websocket = "0.27.0"
