[package]
authors = ["Arianne Project"]
name = "nativehelper"
documentation = "https://arianne-project.org/game/stendhal.html"
edition = "2021"
license = "LGPL-3"
repository = "https://github.com/arianne/stendhal"
version = "0.3.1"


[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = "z"
panic = 'abort'
strip = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
steamworks = "0.10.0"
websocket = "0.27.0"
